test/should-fail/jfxc1628b.visage
/**
 * @subtest
 */

def sonono = 33;

class jfxc1628 {
  def nono = 55
}
